--- a/PROJECT/portfolio-project/css/style.css
+++ b/PROJECT/portfolio-project/css/style.css
@@ -14,7 +14,7 @@ a{
 {
   height: 80px;
   width: 100%;
-  background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQt3nAukVK2G2mXI436ZNB7Y8074MKfoLuZZwelC_eDc3DedPSd0cDU8U7oCYK0ljy1CTQ&usqp=CAU) no-repeat;
+  background: url(../images/image1.jpeg) no-repeat;
   background-size: cover;
   position: fixed;
   top: 0%;
