--- a/PROJECT/portfolio-project/css/media.css
+++ b/PROJECT/portfolio-project/css/media.css
@@ -1,47 +1,56 @@
 @media(max-width:500px)
 {
-    .header{
-        height: 60px;
-        background: white;
-    }
-    .navbar
-    {
-        display: none;
-    }
-    .logo{
-        height: 60px;
-    }
-    
-    .logo i{
-        margin-left: 110%;
-        display: block;
-    }
-    
-    .home-content{
-        width: 100%;
-    }
-    .person{
-        width: 100%;
-        padding: 50px 0 50px 0;
-        margin-left: -10%;
-    }
-    .home-content h1{
-        font-size: 45px;
-    }
-    .home-content h3{
-        font-size: 25px;
-    }
-    .home-content p{
-        font-size: 18px;
-    }
-    .sidebar
-    {padding-top: 50px;}
-    .sidebar a 
-    {font-size: 18px;
+/* header start */
+.header{
+    height: 60px;
+    background: white;
+}
+.navbar
+{
+    display: none;
+}
+.logo{
+    height: 60px;
+}  
+.logo i{
+    margin-left: 110%;
+    display: block;
+} 
+.home-content{
+     width: 100%;
+}
+.person{
+    width: 100%;
+    padding: 50px 0 50px 0;
+    margin-left: -10%;
+}
+.home-content h1{
+    font-size: 45px;
+}
+.home-content h3{
+    font-size: 25px;
+}
+.home-content p{
+    font-size: 18px;
+}
+.sidebar
+{padding-top: 50px;}
+.sidebar a 
+{
+    font-size: 18px;
     margin-top: 15px;
-    }
+}
+.home{
+    margin-top: 40px;
+    padding: 10% 0 10% 10%;
+}
+/* header end */
 
-
+/* About start */
+.about-section
+{
+    padding-top: 0px;
+}   
 .profile-section-2 .part-1{
     margin: unset;
   }  
@@ -64,8 +73,9 @@
 .profile-section-2 .part-1{
     width: 100%;
 }
+/* About end */
 
-
+/* Skills start */
 .skills-department{
     padding-top: 50px;
 }
@@ -76,44 +86,77 @@ padding: 10px 0px;
 .skills-department h2{
     margin-bottom: 30px;
 }
+/* Skills end */
 
+/* Education start  */
+.container4
+{
+  width: 90%;
+}
+/* Education end */
 
+/* project start */
+.main-project{
+    padding: 50px 0 120px 0;
+}
+.main-project .project-middle .project-item{
+    width: 100%;
+}
+.overplay h2{
+    margin-top: 70%;
+    font-size: 40px;
+}
+/* project end */
 
+/* Contact start */
+.contact
+{
+	padding:50px;
+    background-size: cover;
+}
+.contact .container .contactinfo{
+    width: 100%;
+}
+.contact .content{
+    width: 100%;
+    text-align: center;
+}
+.container
+{
+	flex-direction: column;
+}
+.container .contactinfo
+{
+	margin-bottom: 40px
+}
+.container .contactinfo,
+.contactForm 
+{
+	width: 100%
+}
+.contact .container .contactinfo .box .text h3{
+    color: #2E5A88;
+}
+/* Contact end  */
 
-    .main-project{
-        padding: 0;
-    }
-    .main-project .project-middle .project-item{
-        width: 100%;
-    }
+/*  Iamge start */
+.back-img {
+    width: 100%;
+}
+/*Iamge end */
 
-
-    .contact
-	{
-		padding:50px;
-	}
-    .contact .content{
-        width: 100%;
-        text-align: center;
-      }
-	.container
-	{
-		flex-direction: column;
-	}
-	 .container .contactinfo
-	{
-		margin-bottom: 40px
-	}
- 	.container .contactinfo,
-	.contactForm 
-	{
-		width: 100%
-	}
-
-    .main-drop {
-        width: 100%;
-    }
-
+/*Footer section start */
+footer .nav li{
+    font-size: 18px;
+    margin: 0px 10px;
+}
+footer p{
+    font-size: 18px;
+}
+footer h2{
+    font-size: 3vw;
+}
+/* Footer section end  */
 
 
 }
