--- a/PROJECT/portfolio-project/grid-media/css/style.css
+++ b/PROJECT/portfolio-project/grid-media/css/style.css
@@ -1,5 +1,4 @@
-*
-{
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -11,24 +10,24 @@ body
 {
     overflow-x: hidden;
 }
+/* header start */
 .banner .header{
     width: 100%;
-    border: 1px solid black;
     display: grid;
     grid-template-columns: 3fr 3fr 4fr;
     grid-template-rows: 90px;
     background-color: white;
-    /* position: fixed;
+    position: fixed;
     top: 0%;
     left: 0%;
-    z-index: 3; */
+    z-index: 3;
   }
 .banner .header .logo{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
     position: relative;
+    border: 1px solid black;
 }
 .banner .header .logo span{
     font-size: 4lvh;
@@ -39,7 +38,6 @@ body
     right: 0%;
     display: none;
 }
-
 .banner .header .nav{
     border: 1px solid black;
     display: flex;
@@ -49,10 +47,8 @@ body
 .banner .header .nav li{
     display: inline-block;
     position: relative;
-    padding: 5px 8px 5px 8px
-     
+    padding: 5px 8px 5px 8px  
 }
-
 .banner .header .nav li a{
     display: inline-block;
     text-decoration: none;
@@ -64,15 +60,13 @@ body
 .banner .header .nav li a:hover{
     color: blue;
 }
-
 .banner .header .nav .dropdown{
     width: 180px;
     position: absolute;
     top: 150%;
     left: 30%;
     text-align: center;
-    /* visibility: hidden; */
-    opacity: 0;
+    visibility: hidden;
     transition: 0.5s;
     z-index: 3;
 }
@@ -81,15 +75,13 @@ body
     padding: 0px 0px 0px 0px;
     border-bottom: 1px solid #ededed;
 }
-
 .banner .header .nav .dropdown li a{
     padding: 10px 0;
     background-color: white;
     display: block;
 }
 .banner .header .nav ul li:hover .dropdown{
-    /* visibility: visible; */
-    opacity: 1;
+    visibility: visible;
     top: 105%;
 }
 .banner .header .nav .dropdown li a:hover{
@@ -152,7 +144,6 @@ body
     background-color: blue;
     color: white;
 }
-
 .banner .header .buy-now{
     border: 1px solid black;
     word-spacing: 10px;
@@ -171,12 +162,12 @@ body
 .banner .header .buy-now a:hover{
     border: 1px solid #384aeb;
 }
+/* header end */
 
-
+/* banner-2 start */
 .banner .banner-2 
 {
     height: auto;
-    border: 1px solid black;
     display: grid;
     grid-template-columns: 3.5fr 6.5fr;
     grid-template-rows: 750px;
@@ -184,8 +175,7 @@ body
 .banner .banner-2 .left
 {
     background: #384aeb;
-    position: relative;
-    
+    position: relative; 
 }
 .banner .banner-2 .left .img{
     height: 690px;
@@ -198,7 +188,6 @@ body
     left: 40%;
     z-index: 2;
 }
-
 .banner .banner-2 .right
 {
     background: #F1F6F7;
@@ -206,7 +195,6 @@ body
 }
 .banner .banner-2 .right .text
 {
-    height: 350px;
     width: 550px;
     font-family: "Roboto",sans-serif;
     position: absolute;
@@ -244,7 +232,9 @@ body
     border: 1px solid #384aeb;
     background-color: white;
 }
+/* banner-2 end */
 
+/* banner-3 start */
 .banner .banner-3{
     width: 100%;
     margin: 10px 0;
@@ -255,7 +245,6 @@ body
     background-color: white;
 }
 .banner .banner-3 .image1{
-    /* height: 440; */
     background: url(../images/hero-slide1.png.webp);
     background-size: 100% 100%;
     background-size: cover;
@@ -303,7 +292,6 @@ body
     font-size: 17px;
     color: white;
 }
-
 .banner .banner-3 .image2 .effect{
     height: 100%;
     width: 100%;
@@ -365,16 +353,17 @@ body
     font-size: 17px;
     color: white;
 }
+/* banner-3 end */
 
-
+/* banner-4 start */
 .banner .banner-4{
     width: 100%;
     margin: 100px 0 100px 0;
 }
 .banner .banner-4 .intro{
-    height: 130px;
     width: 75%;
     margin: auto;
+    padding-bottom: 60px;
 }
 .banner .banner-4 .intro p{
     color: #777;
@@ -410,7 +399,6 @@ body
 .banner .banner-4 .product .prod-img .img{
     height: 70%;
 }
-
 .banner .banner-4 .product .prod-img .card-info{
     width: 100%;
     height:30%;
@@ -454,8 +442,9 @@ body
     outline: none;
     border: none;
 }
+/* banner-4 end */
 
-
+/* banner-5 start */
 .banner .banner-5
 {
     height: 500px;
@@ -465,7 +454,6 @@ body
     position: relative;
 }
 .banner .banner-5 .content{
-    height: 330px;
     width: 350px;
     text-align: center;
     position: absolute;
@@ -501,17 +489,18 @@ body
     border: 1px solid #384aeb;
     background-color: white;
 }
+/* banner-5 end */
 
-
+/* banner-6 start */
 .banner .banner-6{
     height: auto;
     width: 100%;
     margin: 100px 0;
 }
 .banner .banner-6 .intro{
-    height: 130px;
     width: 75%;
     margin: auto;
+    padding-bottom: 60px;
 }
 .banner .banner-6 .intro p{
     color: #777;
@@ -547,7 +536,6 @@ body
 .banner .banner-6 .product .prod-img .img{
     height: 70%;
 }
-
 .banner .banner-6 .product .prod-img .card-info{
     width: 100%;
     height:30%;
@@ -591,15 +579,16 @@ body
     outline: none;
     border: none;
 }
+/* banner-6 end */
 
-
+/* banner-7 start */
 .banner .banner-7{
     width: 100%;
 }
 .banner .banner-7 .intro{
-    height: 120px;
     width: 75%;
     margin: auto;
+    padding-bottom: 60px;
 }
 .banner .banner-7 .intro p{
     color: #777;
@@ -618,7 +607,6 @@ body
 }
 .banner .banner-7 .news-container{
     margin: auto;
-    height: auto;
     width: 75%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -627,7 +615,6 @@ body
 }
 .banner .banner-7 .news-container .news{
     position: relative;
-    
 }
 .banner .banner-7 .news-container .news .news-image{
     height: 55%;
@@ -665,8 +652,9 @@ body
 .banner .banner-7 .news-container .news:hover span a{
     color: #384aeb;
 }
+/* banner-7 end */
 
-
+/* banner-8 start */
 .banner .banner-8{
     height: 350px;
     width: 100%;
@@ -724,10 +712,10 @@ body
     background-color: white;
     color: black;
 }
+/* banner-8 end */
 
-
+/* banner-9 start */
 .banner-9{
-    /* height: 700px; */
     width: 100%;
     padding-top: 150px;
     background: #002347;
@@ -742,7 +730,6 @@ body
     grid-template-rows: 400px;
     grid-gap: 40px;
 }
-
 .banner-9 .footer .footer-top .mission h4{
     font-size: 36px;
     font-weight: 600;
@@ -773,7 +760,6 @@ body
 .banner-9 .footer .footer-top .links a:hover{
     color: #384aeb;
 }
-
 .banner-9 .footer .footer-top .gallary h4{
     font-size: 20px;
     font-weight: 600;
@@ -814,7 +800,6 @@ body
 .banner-9 .footer .footer-top .contact b{
     color: white;
 }
-
 .banner-9 .footer-bottom{
     width: 100%;
     background: rgba(0,35,71,0.980392);
@@ -824,6 +809,6 @@ body
 .banner-9 .footer-bottom p{
     color: white;
     font-size: 17px;
-    text-align: center;
-    
+    text-align: center;   
 }
+/* banner-9 end */
